src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dhU-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault window height: U\nwant fullscreen: BN"
expression: snapshot
---
initial configure:
size: 616 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
